[project]
name = "malar"
version = "0.0.1"
description = "A wrapper for the Malardalen API"
license = { file = "LICENSE" }
authors = [{ name = "Poly2it" }]
dependencies = ["httpx", "beautifulsoup4"]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["malar"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
strict = [ "malar" ]
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true

